Theodore's Pizza Shop/force-app/main/default/objects/tps_Pizza_Order__c/tps_Pizza_Order__c.object-meta.xml
<CustomObject>
    <label>Pizza Order</label>
    <nameField>
        <displayFormat>PO-{00000}</displayFormat>
        <label>Pizza Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pizza Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>