Theodore's Pizza Shop/force-app/main/default/objects/tps_Pizza_Order__c/fields/tps_Contact__c.field-meta.xml
<CustomField>
    <fullName>tps_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pizza Orders</relationshipLabel>
    <relationshipName>Pizza_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>