Theodore's Pizza Shop/force-app/main/default/objects/tps_Pizza_Order__c/fields/tps_Number_of_Pizza__c.field-meta.xml
<CustomField>
    <fullName>tps_Number_of_Pizza__c</fullName>
    <label>Number of Pizza&apos;s</label>
    <summaryForeignKey>tps_Pizza__c.tps_Pizza_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>