Theodore's Pizza Shop/force-app/main/default/objects/tps_Pizza_Order__c/fields/tps_Order_Total__c.field-meta.xml
<CustomField>
    <fullName>tps_Order_Total__c</fullName>
    <label>Order Total</label>
    <summarizedField>tps_Pizza__c.tps_Price__c</summarizedField>
    <summaryForeignKey>tps_Pizza__c.tps_Pizza_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>