Theodore's Pizza Shop/force-app/main/default/objects/tps_Pizza_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>tps_Number_of_Pizza__c</columns>
    <columns>tps_Order_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>